--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,25 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  font-size: 62.5%;
+  font-family: "Poppins", system-ui, sans-serif;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
 
 /*# sourceMappingURL=main.css.map */
