--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,1 +1,35 @@
-@use 'variables' as *;
+@use "variables" as *;
+
+@mixin button-base {
+  padding: 1.5rem 4.3rem;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 1.6rem;
+  border: none;
+}
+
+// Reset
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  font-size: $font-size-base;
+  font-family: $font-family-base;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
