--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,39 @@ button,
 textarea,
 select {
   font: inherit;
+  border: none;
+  background: none;
+}
+
+/* Body */
+body {
+  background: #ffffff;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Header */
+.site-header {
+  padding: 0 2.4rem;
+  max-width: 124rem;
+  width: 100%;
+  height: 6.4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.site-header .logo,
+.site-header .theme-toggle {
+  height: 2.4rem;
+}
+.site-header .burger-menu {
+  width: 2.2rem;
+}
+.site-header .header-actions {
+  display: flex;
+  gap: 3.7rem;
 }
 
 /*# sourceMappingURL=main.css.map */
