--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,36 @@
-@use 'variables' as *;
-@use 'base';
+@use "variables" as *;
+@use "base";
 
+/* Body */
+body {
+  background: $color-bg-light;
+  color: $color-text-light;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Header */
+.site-header {
+  padding: 0 2.4rem;
+  max-width: 124rem;
+  width: 100%;
+  height: 6.4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .logo,
+  .theme-toggle {
+    height: 2.4rem;
+  }
+
+  .burger-menu {
+    width: 2.2rem;
+  }
+
+  .header-actions {
+    display: flex;
+    gap: 3.7rem;
+  }
+}
