--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/* Main theme */
+/* Button theme */
 *,
 *::before,
 *::after {
@@ -24,16 +26,28 @@ select {
   background: none;
 }
 
-/* Body */
-body {
-  background: #ffffff;
-  color: #000000;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+a {
+  text-decoration: none;
 }
 
-/* Header */
+.button {
+  padding: 1.5rem 4.3rem;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 1.6rem;
+  border: none;
+}
+
+.button {
+  background-color: #000000;
+  color: #ffffff;
+}
+.button.dark {
+  background-color: #ffffff;
+  color: #000000;
+}
+
 .site-header {
   padding: 0 2.4rem;
   max-width: 124rem;
@@ -53,6 +67,19 @@ body {
 .site-header .header-actions {
   display: flex;
   gap: 3.7rem;
+}
+
+/* Body */
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
+  color: #000000;
+}
+body.dark {
+  background-color: #1e2a39;
+  color: #ffffff;
 }
 
 /*# sourceMappingURL=main.css.map */
