--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,36 +1,20 @@
-@use "variables" as *;
-@use "base";
+@use "./abstracts/variables";
+@use "./abstracts/functions";
+@use "./abstracts/mixins";
+@use "./base/reset";
+@use "./components/buttons";
+@use "./layout/header";
+@use "./layout/footer";
 
 /* Body */
 body {
-  background: $color-bg-light;
-  color: $color-text-light;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+  @include mixins.main-theme(variables.$color-bg-light);
 
-/* Header */
-.site-header {
-  padding: 0 2.4rem;
-  max-width: 124rem;
-  width: 100%;
-  height: 6.4rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  .logo,
-  .theme-toggle {
-    height: 2.4rem;
-  }
-
-  .burger-menu {
-    width: 2.2rem;
-  }
-
-  .header-actions {
-    display: flex;
-    gap: 3.7rem;
+  &.dark {
+    @include mixins.main-theme(variables.$color-bg-dark);
   }
 }
+
