--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,1 +1,57 @@
 @use "../abstracts/variables";
+
+.site-footer {
+  width: 100%;
+  max-width: 124rem;
+  padding: 2.4rem;
+  font-size: 1.6rem;
+  line-height: 3.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.4rem;
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+
+    * {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .footer-logo {
+      font-size: 2rem;
+      font-weight: 500;
+    }
+
+    .footer-socials {
+      .footer-socials-icons {
+        width: 13.3rem;
+        height: 3.3rem;
+        margin-top: 0.9rem;
+        background-image: url("../assets/icons/socials-light.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+    }
+  }
+
+  &.dark {
+    .footer-socials {
+      .footer-socials-icons {
+        background-image: url("../assets/icons/socials-dark.svg");
+      }
+    }
+  }
+}
+
+body.menu-open {
+  .site-footer {
+    display: none;
+  }
+}
