--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,12 @@ body {
     @include mixins.main-theme(variables.$color-bg-dark);
   }
 
+  &.menu-open {
+    main {
+      display: none;
+    }
+  }
+
   * {
     transition: all 0.3s ease-in-out;
   }
