--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -12,9 +12,16 @@
   gap: 2.4rem;
 
   .footer-container {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 2.4rem;
+
+    @media (min-width: variables.$breakpoint-tablet) {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
 
     * {
       display: flex;
@@ -38,6 +45,15 @@
         background-repeat: no-repeat;
         background-position: center;
       }
+    }
+  }
+  .footer-copyright {
+    width: 100%;
+    text-align: center;
+    @media (min-width: variables.$breakpoint-tablet) {
+      border-top: 1px solid #e4d8d8;
+      padding-top: 2.4rem;
+      padding-bottom: 5rem;
     }
   }
 
