--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -10,7 +10,7 @@ $font-size-base: 62.5%;
 // Light theme 
 $color-bg-light: #ffffff;
 $color-text-light: #000000;
-$color-btn-bg-light: #000000;
+$color-btn-bg-light: #052A44;
 $color-btn-text-light: #ffffff;
 
 // Dark theme
