--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,12 @@
 @use "./base/reset";
 @use "./components/buttons";
 @use "./layout/header";
+@use "./layout/section1";
+@use "./layout/section2";
+@use "./layout/section3";
+@use "./layout/section4";
+@use "./layout/section5";
+@use "./layout/section6";
 @use "./layout/footer";
 
 /* Body */
